# Novel-video-workflow

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  task_plan.md
config/defaults/: system.yaml
config/modules/: audio.yaml  render.yaml  review.yaml
config/profiles/: dev.yaml  routed_api_local.yaml  routed_api_local_shared_8b.yaml
docs/: decision-log.md  issue_solution_log.md
docs/contracts/: README.md
docs/design/: ARCH_001_internal_single_tenant_av_workflow.md  README.md
docs/plans/: 2026-04-03-av-workflow-implementation.md  2026-04-03-execution-runtime-slice.md  2026-04-03-hybrid-shot-pipeline-design.md  2026-04-03-hybrid-shot-pipeline-implementation.md  2026-04-03-local-execution-slice-design.md  README.md
docs/policy/: README.md
docs/requirements/: README.md  REQ_001_internal_single_tenant_av_workflow.md
scripts/: deploy.sh  doctor.sh  install_remote_module.sh  provision_z_image_backend.sh
src/av_workflow/: __init__.py
tests/integration/: test_api_smoke.py  test_execute_job_api.py  test_hybrid_job_flow.py  test_render_service_api.py
tests/unit/: test_agent_gateway.py  test_audio_mix_service.py  test_audio_timeline_service.py  test_compose_execution.py  test_compose_service.py  test_config_loader.py  test_continuity_review.py  test_contract_models.py  test_execution_runtime_factory.py  test_ffmpeg_compose_paths.py  test_ffmpeg_executor.py  test_ingest_service.py  test_job_execution_service.py  test_local_provider_adapters.py  (+14 more)
(+44 files in other folders)
